--- a/.editorconfig
+++ b/.editorconfig
@@ -22,4 +22,6 @@ trim_trailing_whitespace = true
 trim_trailing_whitespace = false
 
 [*.svg]
-indent_style = ignore trim_trailing_whitespace = false insert_final_newline = ignore
+indent_style = ignore
+trim_trailing_whitespace = false
+insert_final_newline = ignore
